[gd_scene load_steps=4 format=3 uid="uid://euj76j2cu2rr"]

[ext_resource type="Script" path="res://scene_manager.gd" id="1_kutdb"]
[ext_resource type="PackedScene" uid="uid://1qaifsf0a62h" path="res://transition_screen.tscn" id="2_qet5p"]
[ext_resource type="PackedScene" uid="uid://xysorl0yuw36" path="res://game.tscn" id="2_ry2gv"]

[node name="SceneManager" type="Node2D"]
script = ExtResource("1_kutdb")

[node name="CurrentScene" type="Node2D" parent="."]

[node name="Game" parent="CurrentScene" instance=ExtResource("2_ry2gv")]

[node name="TransitionScreen" parent="." instance=ExtResource("2_qet5p")]

[connection signal="transitioned" from="TransitionScreen" to="." method="_on_transition_screen_transitioned"]
